--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lucide-react": "^0.312.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "node-vibrant": "^3.1.6",
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.7"
