--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.15",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -28,7 +29,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "node-vibrant": "^3.1.6",
-    "prisma": "^5.8.1",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
